# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: asgi.py
docker/api/: Dockerfile  entrypoint.sh
docker/celery/: Dockerfile
docker/certbot/: Dockerfile
docker/nginx/: Dockerfile
docker/nginx/conf/: nginx.conf
src/: create_test_user.py
src/appointments/: admin_urls.py  models.py  serializers.py  signals.py  views.py
src/appointments/migrations/: 0001_initial.py  0002_alter_appointment_effective_date.py  0002_initial.py
src/approval/: apps.py  models.py  ocr.py  serializers.py  signals.py  urls.py  validators.py  views.py
src/approval/migrations/: 0001_initial.py  0002_initial.py  0002_remove_approval_file_alter_approval_status.py  0003_agenda_reference_reviewstep.py  (+5 more)
src/attendance/: admin_urls.py  models.py  serializers.py  urls.py  views.py
src/chatbot/: admin_urls.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py  vector_models.py  vectorstores.py  views.py
src/config/: asgi.py  celery.py  middleware.py  settings.py  urls.py
src/core/: middleware.py  models.py  pagination.py  permissions.py  vector_models.py  vectorstores.py
src/departments/: admin.py  admin_urls.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
src/events/: admin_urls.py  models.py  serializers.py  urls.py  views.py
src/mentorship/: admin_urls.py  apps.py  models.py  recommendation.py  serializers.py  signals.py  tasks.py  urls.py  vectorstores.py  views.py
src/messenger/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
src/notifications/: consumers.py  models.py  serializers.py  urls.py  utils.py  views.py
src/policies/: models.py
src/ptos/: apps.py  models.py  serializers.py  signals.py  strategies.py  urls.py  views.py
src/recruitment/: apps.py  models.py  serializers.py  signals.py  summarization.py  tasks.py  urls.py  views.py
src/templates/: invite-email.html
src/todos/: models.py  serializers.py  urls.py  views.py
src/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
(+68 files in other folders)
