[project]
name = "luminari-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Si Young Byun", email = "siyoung.byun@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
    "djangorestframework>=3.15.2",
    "channels[daphne]>=4.1.0",
    "djangorestframework-simplejwt[crypto]>=5.3.1",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.2.1",
    "django-cors-headers>=4.4.0",
    "pillow>=10.4.0",
    "openai>=1.35.13",
    "langchain>=0.2.8",
    "langchain-postgres>=0.0.9",
    "django-extensions>=3.2.3",
    "celery>=5.4.0",
    "langchain-community>=0.2.7",
    "django-celery-results>=2.5.1",
    "redis>=5.0.7",
    "pymupdf>=1.24.7",
    "langchain-openai>=0.1.16",
    "pgvector>=0.2.5",
    "requests>=2.32.3",
    "supabase>=2.5.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.4.2",
]
hook = [
    "pre-commit>=3.7.1",
]
